# stattest

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: wilcoxon.rs
src/: lib.rs
src/distribution/: mod.rs  shapiro_wilk.rs  signed_rank.rs
src/statistics/: iter_statistics_ext.rs  mod.rs  ranks.rs  statistics_ext.rs
src/test/: f.rs  levenes.rs  mann_whitney_u.rs  mod.rs  shapiro_wilk.rs  students_t.rs  welchs_t.rs  wilcoxon_u.rs  wilcoxon_w.rs
src/traits/: abs.rs  bounded.rs  mod.rs  one.rs  quantization.rs  zero.rs
