[package]
name = "stattest"
version = "0.0.0"
authors = ["Lars Willighagen <lars.willighagen@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
statrs = { git = "https://github.com/larsgw/statrs", branch = "patch-1" }
rand = "0.7.3"
voracious_radix_sort = {version="1.2.0", optional=true}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
paste = "1.0.15"


[[bench]]
name = "wilcoxon"
harness = false
